--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,8 +30,8 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: minimal-mistakes-jekyll
-plugins:
+remote_theme: "mmistakes/minimal-mistakes@4.24.0"
+plugins: jekyll-include-cache
   - jekyll-feed
 
 # Exclude from processing.
