--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -8,7 +8,7 @@ source "https://rubygems.org"
 # This will help ensure the proper Jekyll version is running.
 # Happy Jekylling!
 # gem "jekyll", "~> 4.3.2"
-gem "minimal-mistakes-jekyll"
+# gem "minimal-mistakes-jekyll"
 
 gem "github-pages", "~> 228", group: :jekyll_plugins
 gem "jekyll-include-cache", group: :jekyll_plugins
